@@ -33,8 +33,7 @@ exclude = [
 aes = "0.8.3"
 ctr = "0.9.2"
 hmac = "0.12.1"
-rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
-rand_chacha = { version = "0.3.1", default-features = false }
+rand = { version = "0.8.5", default-features = false, features = ["getrandom", "std_rng"] }
 scrypt = { version = "0.11.0", default-features = false }
 sha2 = { version = "0.10.7", default-features = false }
 
